# document_text_extract

./: README.md  pyproject.toml  requirements.txt
assets/: sample_document.docx  sample_document.html
scripts/: run.sh
src/document_text_extract/: __main__.py  loader.py  processor.py  sanitizer.py
src/tests/: test_loader.py
