[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "document-text-extract"
version = "0.1.0"
description = "Package to extract text from a document: PDF, docx, etc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "python-docx>=1.2.0",
]
